// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<List> by default matches with snapshot 1`] = `
<ul
  data-radium={true}
  style={
    Object {
      "listStyle": "none",
      "margin": 0,
      "padding": 0,
    }
  }
>
  <li>
    <div>
      Item 1
    </div>
  </li>
  <li>
    <div>
      Item 2
    </div>
  </li>
  <li>
    <div>
      Item 3
    </div>
  </li>
</ul>
`;

exports[`<List> with <ListButtonItem> by default matches with snapshot 1`] = `
<ul
  data-radium={true}
  style={
    Object {
      "listStyle": "none",
      "margin": 0,
      "padding": 0,
    }
  }
>
  <li>
    <div
      data-radium={true}
    >
      <div
        data-radium={true}
        onClick={[Function]}
        onKeyPress={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        role="button"
        style={
          Object {
            "borderBottom": "#eee 0.125rem solid",
            "borderLeft": "#eee 0.125rem solid",
            "borderRight": "#eee 0.125rem solid",
            "borderTop": "#eee 0.125rem solid",
            "cursor": "pointer",
            "display": "flex",
            "paddingLeft": "1.25rem",
            "paddingRight": "1.25rem",
          }
        }
        tabIndex="0"
      >
        <div
          data-radium={true}
          style={
            Object {
              "flexGrow": 1,
            }
          }
        >
          Alice
        </div>
        <div
          data-radium={true}
          style={
            Object {
              "alignItems": "center",
              "display": "flex",
            }
          }
        >
          <svg
            className="k-ArrowIcon k-ArrowIcon--right k-Button__icon"
            style={null}
            viewBox="0 0 6 6"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              Arrow
            </title>
            <path
              d="M6 0H0v6h2V2h4z"
            />
          </svg>
        </div>
      </div>
      <style
        dangerouslySetInnerHTML={
          Object {
            "__html": "",
          }
        }
      />
    </div>
  </li>
  <li>
    <div
      data-radium={true}
    >
      <div
        data-radium={true}
        onClick={[Function]}
        onKeyPress={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        role="button"
        style={
          Object {
            "borderBottom": "#eee 0.125rem solid",
            "borderLeft": "#eee 0.125rem solid",
            "borderRight": "#eee 0.125rem solid",
            "cursor": "pointer",
            "display": "flex",
            "paddingLeft": "1.25rem",
            "paddingRight": "1.25rem",
          }
        }
        tabIndex="0"
      >
        <div
          data-radium={true}
          style={
            Object {
              "flexGrow": 1,
            }
          }
        >
          Cheshire Cat
        </div>
        <div
          data-radium={true}
          style={
            Object {
              "alignItems": "center",
              "display": "flex",
            }
          }
        >
          <svg
            className="k-ArrowIcon k-ArrowIcon--right k-Button__icon"
            style={null}
            viewBox="0 0 6 6"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              Arrow
            </title>
            <path
              d="M6 0H0v6h2V2h4z"
            />
          </svg>
        </div>
      </div>
      <style
        dangerouslySetInnerHTML={
          Object {
            "__html": "",
          }
        }
      />
    </div>
  </li>
  <li>
    <div
      data-radium={true}
    >
      <div
        data-radium={true}
        onClick={[Function]}
        onKeyPress={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        role="button"
        style={
          Object {
            "borderBottom": "#eee 0.125rem solid",
            "borderLeft": "#eee 0.125rem solid",
            "borderRight": "#eee 0.125rem solid",
            "cursor": "pointer",
            "display": "flex",
            "paddingLeft": "1.25rem",
            "paddingRight": "1.25rem",
          }
        }
        tabIndex="0"
      >
        <div
          data-radium={true}
          style={
            Object {
              "flexGrow": 1,
            }
          }
        >
          Mad Hatter
        </div>
        <div
          data-radium={true}
          style={
            Object {
              "alignItems": "center",
              "display": "flex",
            }
          }
        >
          <svg
            className="k-ArrowIcon k-ArrowIcon--right k-Button__icon"
            style={null}
            viewBox="0 0 6 6"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              Arrow
            </title>
            <path
              d="M6 0H0v6h2V2h4z"
            />
          </svg>
        </div>
      </div>
      <style
        dangerouslySetInnerHTML={
          Object {
            "__html": "",
          }
        }
      />
    </div>
  </li>
</ul>
`;

exports[`<List> with <ListButtonItem> with a disabled button matches with snapshot 1`] = `
<ul
  data-radium={true}
  style={
    Object {
      "listStyle": "none",
      "margin": 0,
      "padding": 0,
    }
  }
>
  <li>
    <div
      data-radium={true}
    >
      <div
        data-radium={true}
        onClick={[Function]}
        onKeyPress={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        role="button"
        style={
          Object {
            "borderBottom": "#eee 0.125rem solid",
            "borderLeft": "#eee 0.125rem solid",
            "borderRight": "#eee 0.125rem solid",
            "borderTop": "#eee 0.125rem solid",
            "cursor": "pointer",
            "display": "flex",
            "paddingLeft": "1.25rem",
            "paddingRight": "1.25rem",
          }
        }
        tabIndex="0"
      >
        <div
          data-radium={true}
          style={
            Object {
              "flexGrow": 1,
            }
          }
        >
          Alice
        </div>
        <div
          data-radium={true}
          style={
            Object {
              "alignItems": "center",
              "display": "flex",
            }
          }
        >
          <svg
            className="k-ArrowIcon k-ArrowIcon--right k-Button__icon"
            style={null}
            viewBox="0 0 6 6"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              Arrow
            </title>
            <path
              d="M6 0H0v6h2V2h4z"
            />
          </svg>
        </div>
      </div>
      <style
        dangerouslySetInnerHTML={
          Object {
            "__html": "",
          }
        }
      />
    </div>
  </li>
  <li>
    <div
      data-radium={true}
    >
      <div
        data-radium={true}
        onClick={null}
        onKeyPress={null}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        role="button"
        style={
          Object {
            "backgroundColor": "#fff",
            "borderBottom": "#eee 0.125rem solid",
            "borderLeft": "#eee 0.125rem solid",
            "borderRight": "#eee 0.125rem solid",
            "color": "#d8d8d8",
            "cursor": "not-allowed",
            "display": "flex",
            "paddingLeft": "1.25rem",
            "paddingRight": "1.25rem",
          }
        }
        tabIndex="0"
      >
        <div
          data-radium={true}
          style={
            Object {
              "flexGrow": 1,
            }
          }
        >
          Cheshire Cat
        </div>
        <div
          data-radium={true}
          style={
            Object {
              "alignItems": "center",
              "display": "flex",
            }
          }
        >
          <svg
            className="k-ArrowIcon k-ArrowIcon--right k-Button__icon"
            style={
              Object {
                "fill": "#d8d8d8",
              }
            }
            viewBox="0 0 6 6"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              Arrow
            </title>
            <path
              d="M6 0H0v6h2V2h4z"
            />
          </svg>
        </div>
      </div>
      <style
        dangerouslySetInnerHTML={
          Object {
            "__html": "",
          }
        }
      />
    </div>
  </li>
  <li>
    <div
      data-radium={true}
    >
      <div
        data-radium={true}
        onClick={[Function]}
        onKeyPress={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        role="button"
        style={
          Object {
            "borderBottom": "#eee 0.125rem solid",
            "borderLeft": "#eee 0.125rem solid",
            "borderRight": "#eee 0.125rem solid",
            "cursor": "pointer",
            "display": "flex",
            "paddingLeft": "1.25rem",
            "paddingRight": "1.25rem",
          }
        }
        tabIndex="0"
      >
        <div
          data-radium={true}
          style={
            Object {
              "flexGrow": 1,
            }
          }
        >
          Mad Hatter
        </div>
        <div
          data-radium={true}
          style={
            Object {
              "alignItems": "center",
              "display": "flex",
            }
          }
        >
          <svg
            className="k-ArrowIcon k-ArrowIcon--right k-Button__icon"
            style={null}
            viewBox="0 0 6 6"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              Arrow
            </title>
            <path
              d="M6 0H0v6h2V2h4z"
            />
          </svg>
        </div>
      </div>
      <style
        dangerouslySetInnerHTML={
          Object {
            "__html": "",
          }
        }
      />
    </div>
  </li>
</ul>
`;
